Fixed bug with navbar blur not working on ios

--- a/src/components/layout/Navbar/Navbar.module.css
+++ b/src/components/layout/Navbar/Navbar.module.css
@@ -33,6 +33,7 @@
     height: calc(var(--navbar-height));
     font-size: var(--font-size);
     font-family: var(--text-font);
+    -webkit-backdrop-filter: blur(16px);
     backdrop-filter: blur(16px);
 
     border-bottom: 1px white solid;
